# oefpil

./: Cargo.toml  README.md  RELEASES.md  katex.html
.github/workflows/: build.yml
examples/: sine.rs
oefpil-sys/: Cargo.toml  LICENSE-BSD  README.md  RELEASES.md  build.rs
oefpil-sys/src/: lib.c  lib.h  lib.rs
oefpil-sys/src/math77_chi2/: dcdchi.h
oefpil-sys/src/oefpil/: blaslapack.c  blaslapack.h  oefpil.c  oefpil.h  oefpil_tcm.c  tiled_la.c  tiled_la.h
src/: lib.rs
