[package]
name = "oefpil"
version = "0.2.0"
rust-version = "1.82.0"
edition = "2021"
description = """Optimum Estimate of Function Parameters by Iterated Linearization (OEFPIL):
Algorithm for nonlinear function fitting to data with errors in both dependent and independent
variables where correlation, both within variables and among variables, might be present."""
documentation = "https://docs.rs/oefpil"
repository = "https://github.com/qu1x/oefpil"
authors = ["Rouven Spreckels <rs@qu1x.dev>"]
license = "MIT OR Apache-2.0"
keywords = [
	"function-fitting",
	"nonlinear-regression",
	"optimization-problem",
	"covariance-matrix",
	"error-propagation",
]
categories = [
	"api-bindings",
	"algorithms",
	"mathematics",
	"science",
]
include = [
	"src/**/*.rs",
	"examples/**/*.rs",
	"katex.html",
	"Cargo.toml",
	"README.md",
	"RELEASES.md",
	"LICENSE-*",
]

[package.metadata.docs.rs]
features = ["random"]
cargo-args = ["-Z", "unstable-options", "-Z", "rustdoc-scrape-examples"]
rustdoc-args = ["--cfg", "docsrs", "--html-in-header", "katex.html"]

[workspace]
members = ["oefpil-sys"]

[dependencies]
oefpil-sys = { version = "0.2.0", path = "oefpil-sys" }
derive_more = { version = "1.0.0", features = ["display", "error", "from"] }
rand = { version = "0.9.0", default-features = false, optional = true }
rand_distr = { version = "0.5.0", default-features = false, optional = true }

[dev-dependencies]
rand_chacha = "0.9.0"
const-hex = "1.14.0"

[lints.rust]
missing-docs = "forbid"

[lints.rustdoc]
broken-intra-doc-links = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }

[profile.dev]
opt-level = 3

[profile.test]
opt-level = 3

[features]
random = ["rand", "rand_distr"]

[[example]]
name = "sine"
required-features = ["random"]
doc-scrape-examples = true
