[package]
name = "oefpil-sys"
version = "0.1.0"
rust-version = "1.82.0"
edition = "2021"
links = "oefpil"
description = "Rust FFI bindings to statically linked C/Fortran library OEFPIL"
documentation = "https://docs.rs/oefpil-sys"
repository = "https://github.com/qu1x/oefpil"
authors = ["Rouven Spreckels <rs@qu1x.dev>"]
license = "MIT OR Apache-2.0"
keywords = [
	"function-fitting",
	"nonlinear-regression",
	"optimumization-problem",
	"covariance-matrix",
	"uncertainty-propagation",
]
categories = [
	"external-ffi-bindings",
	"algorithms",
	"mathematics",
	"science",
]
include = [
	"src/**",
	"Cargo.toml",
	"README.md",
	"RELEASES.md",
	"LICENSE-*",
]

[dependencies]
libc = "0.2.159"
special = "0.11.2"

[features]
built-in = []

[build-dependencies]
cc = "1.1.13"
bindgen = { version = "0.71.0", optional = true }

[lints.rust]
missing-docs = "forbid"
unsafe-op-in-unsafe-fn = "forbid"

[lints.rustdoc]
broken-intra-doc-links = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
