[package]
name = "oefpil-sys"
version = "0.3.0"
rust-version = "1.85.0"
edition = "2024"
links = "oefpil"
description = "Rust FFI bindings to statically linked C/Fortran library OEFPIL"
documentation = "https://docs.rs/oefpil-sys"
repository = "https://github.com/qu1x/oefpil"
authors = ["Rouven Spreckels <rs@qu1x.dev>"]
license = "MIT OR Apache-2.0"
keywords = [
	"function-fitting",
	"nonlinear-regression",
	"optimization-problem",
	"covariance-matrix",
	"error-propagation",
]
categories = [
	"external-ffi-bindings",
	"algorithms",
	"mathematics",
	"science",
]
include = [
	"src/**",
	"build.rs",
	"Cargo.toml",
	"README.md",
	"RELEASES.md",
	"LICENSE-*",
]

[dependencies]
libc = "0.2.169"
special = "0.11.3"

[features]
built-in = []

[build-dependencies]
cc = "1.2.15"
bindgen = { version = "0.71.1", optional = true }

[lints.rust]
missing-docs = "forbid"

[lints.rustdoc]
broken-intra-doc-links = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
